# webrtc-local

./: Cargo.toml  README.md
html/: index.html  rtsp.html
src/: camera.rs  main.rs  rtsp.rs  session.rs  system.rs  transport.rs
src/camera/: macos_camera.rs
src/rtsp/: rtsp_session.rs
src/session/: webrtc_session.rs
src/transport/: http.rs  rtp.rs
src/transport/http/: api.rs  context.rs
