[package]
name = "webrtc-local"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.12.0"
log = "0.4.33"
nokhwa = { version = "0.10.11", features = ["input-native"] }
openh264 = "0.9.3"
rtc = "0.9.0"
time = { version = "0.3.51", features = ["macros", "formatting"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "local-time"] }
clap = { version = "4.6.1", features = ["derive", "env", "string"] }
thiserror = "2.0.18"
anyhow = "1.0.103"
futures = "0.3.32"
axum = "0.8.9"
tower-http = { version = "0.6.6", features = ["fs"] }
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
str0m = "0.21.0"
uuid = { version = "1.23.4", features = ["v7"] }
rand = "0.10.1"
retina = "0.4.19"
urlencoding = "2.1.3"
test-log = "0.2.21"
url = "2.5.8"
rtp = "0.17.1"

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
